--- a/css/style_trans.css
+++ b/css/style_trans.css
@@ -182,6 +182,14 @@ div.trans {
 	background-color: #ffe8e8;
 	font-weight: 600;
 }
+.footer {
+	color: #808080;
+	font-style: italic;
+	font-weight: 300;
+	font-size: 90%;
+	margin-top: 1rem;
+	margin-bottom: 1rem;
+}
 
 @media screen and (max-width: 1200px) {
 	.maincontent { margin: 2rem 8rem; }
