--- a/css/style_trans.css
+++ b/css/style_trans.css
@@ -122,11 +122,8 @@ div.trans {
 .cop-button:hover,
 .cop-button:active,
 .cop-button:focus {
-	background-color: #A5DAFA;
+	background-color: #605bf1;
 	color: white;
-}
-.cop-button:focus {
-	outline:5px auto -webkit-focus-ring-color;outline-offset:-2px
 }
 
 .cop-blue-text {	color: #120D9A; }
@@ -155,7 +152,7 @@ div.trans {
 }
 
 .clear-button {
-	background-color: #918ED9;
+	background-color: #120D9A;
 	border: none;
 	color: white;
 	cursor: pointer;
@@ -166,11 +163,12 @@ div.trans {
 .clear-button:hover,
 .clear-button:active,
 .clear-button:focus {
-	background-color: #87ccf7;
+	background-color: #605bf1;
 	color: white;
 }
+.cop-button:focus,
 .clear-button:focus {
-	outline:5px auto -webkit-focus-ring-color;outline-offset:-2px
+	-webkit-box-shadow:inset 0 1px 1px rgba(0,0,0,.075),0 0 6px #eba5a3;box-shadow:inset 0 1px 1px rgba(0,0,0,.075),0 0 6px #eba5a3;
 }
 
 .lang-select {
